Remove old py2 DB from prod quay.io

--- a/resources/observability/grafana/grafana-dashboard-quayio-prod-aws-resources.configmap.yaml
+++ b/resources/observability/grafana/grafana-dashboard-quayio-prod-aws-resources.configmap.yaml
@@ -129,8 +129,8 @@ data:
             },
             {
               "aliasColors": {
-                "quayio-production": "super-light-yellow",
-                "{dbinstance_identifier=\"quayio-production\",endpoint=\"prom\",exported_job=\"aws_rds\",job=\"cloudwatch-exporter-quay\",namespace=\"app-sre-observability-production\",service=\"cloudwatch-exporter-quay\"}": "dark-orange"
+                "quayio-production-py3": "super-light-yellow",
+                "{dbinstance_identifier=\"quayio-production-py3\",endpoint=\"prom\",exported_job=\"aws_rds\",job=\"cloudwatch-exporter-quay\",namespace=\"app-sre-observability-production\",service=\"cloudwatch-exporter-quay\"}": "dark-orange"
               },
               "bars": false,
               "cacheTimeout": null,
@@ -442,7 +442,7 @@ data:
               "aliasColors": {
                 "read": "blue",
                 "write": "red",
-                "{dbinstance_identifier=\"quayio-production\",endpoint=\"prom\",exported_job=\"aws_rds\",job=\"cloudwatch-exporter-quay\",namespace=\"app-sre-observability-production\",service=\"cloudwatch-exporter-quay\"}": "dark-red"
+                "{dbinstance_identifier=\"quayio-production-py3\",endpoint=\"prom\",exported_job=\"aws_rds\",job=\"cloudwatch-exporter-quay\",namespace=\"app-sre-observability-production\",service=\"cloudwatch-exporter-quay\"}": "dark-red"
               },
               "bars": false,
               "dashLength": 10,
@@ -542,7 +542,7 @@ data:
             },
             {
               "aliasColors": {
-                "quayio-production": "super-light-orange"
+                "quayio-production-py3": "super-light-orange"
               },
               "bars": false,
               "cacheTimeout": null,
@@ -2610,8 +2610,8 @@ data:
             {
               "aliasColors": {
                 "db-apostille-prod-4b8cc2ff-d1f3-497c-bc18-859593c68bdf": "purple",
-                "quayio-production": "purple",
-                "{dbinstance_identifier=\"quayio-production\",endpoint=\"prom\",exported_job=\"aws_rds\",job=\"cloudwatch-exporter-quay\",namespace=\"app-sre-observability-production\",service=\"cloudwatch-exporter-quay\"}": "dark-orange"
+                "quayio-production-py3": "purple",
+                "{dbinstance_identifier=\"quayio-production-py3\",endpoint=\"prom\",exported_job=\"aws_rds\",job=\"cloudwatch-exporter-quay\",namespace=\"app-sre-observability-production\",service=\"cloudwatch-exporter-quay\"}": "dark-orange"
               },
               "bars": false,
               "cacheTimeout": null,
@@ -2805,7 +2805,7 @@ data:
               "aliasColors": {
                 "read": "blue",
                 "write": "red",
-                "{dbinstance_identifier=\"quayio-production\",endpoint=\"prom\",exported_job=\"aws_rds\",job=\"cloudwatch-exporter-quay\",namespace=\"app-sre-observability-production\",service=\"cloudwatch-exporter-quay\"}": "dark-red"
+                "{dbinstance_identifier=\"quayio-production-py3\",endpoint=\"prom\",exported_job=\"aws_rds\",job=\"cloudwatch-exporter-quay\",namespace=\"app-sre-observability-production\",service=\"cloudwatch-exporter-quay\"}": "dark-red"
               },
               "bars": false,
               "dashLength": 10,
