--- a/resources/quay-p/quay/quay.db-alerts.prometheusrulestests.yaml
+++ b/resources/quay-p/quay/quay.db-alerts.prometheusrulestests.yaml
@@ -9,7 +9,7 @@ evaluation_interval: 1m
 tests:
   - interval: 1m
     input_series:
-      - series: aws_rds_database_connections_average{job="cloudwatch-exporter-quay",dbinstance_identifier="quayio-production"}
+      - series: aws_rds_database_connections_average{job="cloudwatch-exporter-quay",dbinstance_identifier="quayio-production-py3"}
         values: 2500 3000 3500 4000 4500 5000 5500 6000 6500 7000 7500 8000 8500 9000 10000 10500
     alert_rule_test:
       - eval_time: 5m
@@ -23,7 +23,7 @@ tests:
               service: quay
               severity: high
               job: cloudwatch-exporter-quay
-              dbinstance_identifier: quayio-production
+              dbinstance_identifier: quayio-production-py3
             exp_annotations:
               message: "quayio-production database connections is over 5000 for 5 minutes"
               dashboard: "https://grafana.app-sre.devshift.net/d/_BkydJaWqprod1234/quay-aws-resources-us-east-1?orgId=1&refresh=1m"
@@ -36,7 +36,7 @@ tests:
               service: quay
               severity: critical
               job: cloudwatch-exporter-quay
-              dbinstance_identifier: quayio-production
+              dbinstance_identifier: quayio-production-py3
             exp_annotations:
               message: "quayio-production database connections is over 7000 for 2 minutes"
               dashboard: "https://grafana.app-sre.devshift.net/d/_BkydJaWqprod1234/quay-aws-resources-us-east-1?orgId=1&refresh=1m"
