--- a/resources/quay-p/quay/quay.db-alerts.prometheusrules.yaml
+++ b/resources/quay-p/quay/quay.db-alerts.prometheusrules.yaml
@@ -13,7 +13,7 @@ spec:
     rules:
     - alert: QuayDatabaseConnectionsHigh
       expr: |
-        aws_rds_database_connections_average{job="cloudwatch-exporter-quay",dbinstance_identifier="quayio-production"} >= 5000
+        aws_rds_database_connections_average{job="cloudwatch-exporter-quay",dbinstance_identifier="quayio-production-py3"} >= 5000
       for: 5m
       labels:
         severity: high # TODO: change to critical once the alert is proven in APPSRE-3300
@@ -24,7 +24,7 @@ spec:
         runbook: "https://gitlab.cee.redhat.com/service/app-interface/-/blob/master/docs/quay/issues/high-database-connections.md"
     - alert: QuayDatabaseConnectionsCritical
       expr: |
-        aws_rds_database_connections_average{job="cloudwatch-exporter-quay",dbinstance_identifier="quayio-production"} >= 7000
+        aws_rds_database_connections_average{job="cloudwatch-exporter-quay",dbinstance_identifier="quayio-production-py3"} >= 7000
       for: 2m
       labels:
         severity: critical
