rollout storage bump to production

--- a/data/services/rhobs/observatorium/observatorium-metrics/cicd/saas.yaml
+++ b/data/services/rhobs/observatorium/observatorium-metrics/cicd/saas.yaml
@@ -115,7 +115,7 @@ resourceTemplates:
       SERVICE_ACCOUNT_NAME: observatorium-metrics
   - namespace:
       $ref: /services/rhobs/observatorium/observatorium-metrics/namespaces/observatorium-metrics-production.yml
-    ref: 3d759a0c002913fc0b26d7e2a5ad2c354e3c216c
+    ref: ed6325f69d9ab5bf4efff81c352968ada962a3de
     parameters:
       NAMESPACE: observatorium-metrics-production
       THANOS_CONFIG_SECRET: thanos-objectstorage
@@ -144,6 +144,7 @@ resourceTemplates:
       THANOS_RECEIVE_CPU_LIMIT: '3'
       THANOS_RECEIVE_MEMORY_REQUEST: '40Gi'
       THANOS_RECEIVE_MEMORY_LIMIT: '40Gi'
+      THANOS_RECEIVE_PVC_STORAGE: '100Gi'
       THANOS_QUERIER_CACHE_MEMORY_REQUEST: '2Gi'
       THANOS_QUERIER_CACHE_MEMORY_LIMIT: '2Gi'
       THANOS_COMPACTOR_REPLICAS: 1
