--- a/data/services/insights/automation-hub/deploy-clowder.yml
+++ b/data/services/insights/automation-hub/deploy-clowder.yml
@@ -16,6 +16,14 @@ pipelinesProvider:
 
 configurableResources: true
 
+deployResources:
+  requests:
+    cpu: 200m
+    memory: 600Mi
+  limits:
+    cpu: 200m
+    memory: 600Mi
+
 slack:
   workspace:
     $ref: /dependencies/slack/coreos.yml
