image-builder: Bump max postgres connections in composer

--- a/data/services/image-builder/cicd/saas.yml
+++ b/data/services/image-builder/cicd/saas.yml
@@ -50,3 +50,4 @@ resourceTemplates:
       ref: e4d535ea5fdc730d0a8eed310e64efbd4baa4a5c
       parameters:
         PGSSLMODE: "require"
+        PGMAXCONNS: "100"
