More resources to gateway deployments
Signed-off-by: Rafa Porres Molina <rporresm@redhat.com>

--- a/data/services/insights/gateway/deploy.yml
+++ b/data/services/insights/gateway/deploy.yml
@@ -16,6 +16,14 @@ pipelinesProvider:
 
 configurableResources: true
 
+deployResources:
+  requests:
+    cpu: 600m
+    memory: 1Gi
+  limits:
+    cpu: 600m
+    memory: 1Gi
+
 slack:
   workspace:
     $ref: /dependencies/slack/coreos.yml
