template quay stage TRUSTED_PROXY_CIDR from vault

--- a/resources/quayio-stage/quay/quay-config.secret.yaml
+++ b/resources/quayio-stage/quay/quay-config.secret.yaml
@@ -297,7 +297,7 @@ data:
     TESTING: false
     THREAT_NAMESPACE_MAXIMUM_BUILD_COUNT: 1
     TRUSTED_PROXY_CIDR:
-    - 172.31.0.0/16
+    - {{{ vault('app-sre/integrations-output/terraform-resources/quays02ue1/quay/quayio-alb', 'vpc_cidr_block') }}}
     TUF_HOST: apostille.stage.quay.io
     TUF_SERVER: 'https://apostille.stage.quay.io'
     USERFILES_LOCATION: s3_us_east_1
