--- a/resources/services/ocm/stage/clusters-service.secret.yaml
+++ b/resources/services/ocm/stage/clusters-service.secret.yaml
@@ -99,5 +99,9 @@ data:
     {{% b64encode %}}{{{ vault('app-sre/integrations-output/terraform-resources/app-sre-stage-01/uhc-stage/rh-oidc-s3-secret', 'bucket') }}}{{% endb64encode %}}
   oidc.bucket.url:
     {{% b64encode %}}{{{ vault('app-sre/integrations-output/terraform-resources/app-sre-stage-01/uhc-stage/rh-oidc-s3-secret', 'endpoint') }}}{{% endb64encode %}}
+  jira.user:
+    {{% b64encode %}}{{{ vault('app-interface/app-sre-stage/uhc-stage/clusters-service', 'jira.user', '{{ vault_secret_version }}') }}}{{% endb64encode %}}
+  jira.password:
+    {{% b64encode %}}{{{ vault('app-interface/app-sre-stage/uhc-stage/clusters-service', 'jira.password', '{{ vault_secret_version }}') }}}{{% endb64encode %}}
   jira.token:
     {{% b64encode %}}{{{ vault('app-interface/app-sre-stage/uhc-stage/clusters-service', 'jira.token', '{{ vault_secret_version }}') }}}{{% endb64encode %}}
