--- a/resources/services/ocm/production/clusters-service.secret.yaml
+++ b/resources/services/ocm/production/clusters-service.secret.yaml
@@ -101,6 +101,8 @@ data:
     {{% b64encode %}}{{{ vault('app-sre/integrations-output/terraform-resources/app-sre-prod-04/uhc-production/rh-oidc-s3-secret', 'bucket') }}}{{% endb64encode %}}
   oidc.bucket.url:
     {{% b64encode %}}{{{ vault('app-sre/integrations-output/terraform-resources/app-sre-prod-04/uhc-production/rh-oidc-s3-secret', 'endpoint') }}}{{% endb64encode %}}
+  jira.token:
+    {{% b64encode %}}{{{ vault('app-interface/app-sre/uhc-production/clusters-service', 'jira.token', '{{ vault_secret_version }}') }}}{{% endb64encode %}}
   jira.user:
     {{% b64encode %}}{{{ vault('app-interface/app-sre/uhc-production/clusters-service', 'jira.user', '{{ vault_secret_version }}') }}}{{% endb64encode %}}
   jira.password:
