--- a/data/services/insights/policies/deploy.yml
+++ b/data/services/insights/policies/deploy.yml
@@ -103,7 +103,7 @@ resourceTemplates:
       DB_SECRET_NAME: policies-ui-backend-db
       CLOUDWATCH_LOGGING_ENABLED: true
       SENTRY_ENABLED: true
-      QUARKUS_REST_CLIENT_NOTIFICATIONS_URL: http://notifications-backend-service.notifications-stage.svc.cluster.local:8000
+      NOTIFICATIONS_URL: http://notifications-backend-service.notifications-stage.svc.cluster.local:8000
   - namespace:
       $ref: /services/insights/policies/namespaces/policies-prod.yml
     ref: 2b42f8351aed798e4a7185bad3b2908499549399
