--- a/data/products/insights/environments/qa.yml
+++ b/data/products/insights/environments/qa.yml
@@ -25,3 +25,4 @@ parameters:
   RBAC_HOST: rbac.rbac-qa.svc.cluster.local
   SOURCES_HOST: sources-api.sources-qa.svc
   SOURCES_PORT: '8080'
+  BACKOFFICE_HOST: backoffice-proxy.apps.ext.spoke.preprod.us-west-2.aws.paas.redhat.com
