--- a/data/services/quayio/saas/quay-migration-jobs.yaml
+++ b/data/services/quayio/saas/quay-migration-jobs.yaml
@@ -34,14 +34,14 @@ resourceTemplates:
   targets:
   - namespace:
       $ref: /services/quayio/namespaces/quays02ue1.yml
-    ref: 23d401e18483b6e8cc8b8afd1a32e7ddb8dd6b75
+    ref: 66b9f78893477d98a7a8575d91fe3ff190b346fd
     parameters:
-      JOB_NAME: "enable-weaveworks-stage-2021-12-06-1"
+      JOB_NAME: "enable-weaveworks-stage-2021-12-06-2"
       ACTIVE_DEADLINE_SECONDS: "600"
       DB_HOST_SECRET: "quayio-stage-57-py3-rds"
       DB_CREDS_SECRET: "quayio-stage-57-py3-rds"
       SUBCOMMAND: "enable_users"
-      ARGS: "--log debug --users weaveworks"
+      ARGS: "weaveworks"
   # - namespace:
   #     $ref: /services/quayio/namespaces/quayp05ue1.yml
   #   ref: 23d401e18483b6e8cc8b8afd1a32e7ddb8dd6b75
