Move replica from ue2 to ue1 in stage quay.io

--- a/data/services/quayio/namespaces/quays02ue1.yml
+++ b/data/services/quayio/namespaces/quays02ue1.yml
@@ -174,8 +174,8 @@ terraformResources:
 - provider: rds
   account: quayio-stage
   identifier: quayio-stage-57-py3-replica
-  availability_zone: us-east-2b
-  defaults: /terraform/resources/quayio-stage/rds-read-replica-us-east-2.yml
+  availability_zone: us-east-1a
+  defaults: /terraform/resources/quayio-stage/rds-read-replica-us-east-1.yml
   replica_source: quayio-stage-57-py3
   parameter_group: /terraform/resources/quayio-stage/rds-parameter-group-1.yml
 - provider: elasticache
