Update policies prod configuration

--- a/data/services/insights/policies/deploy.yml
+++ b/data/services/insights/policies/deploy.yml
@@ -112,7 +112,7 @@ resourceTemplates:
       DB_SECRET_NAME: policies-ui-backend-db
       CLOUDWATCH_LOGGING_ENABLED: true
       SENTRY_ENABLED: true
-      NOTIFICATIONS_URL: http://notifications-backend.notifications-prod.svc.cluster.local:8080
+      NOTIFICATIONS_URL: http://notifications-backend-service.notifications-prod.svc.cluster.local:8000
   - namespace:
       $ref: /services/insights/policies/namespaces/policies-fedramp-stage.yml
     ref: 812cb0ce9abd57be3fbc489d377b70aa41d9d43a
