make apostille-stage rds not deletion protected

--- a/resources/terraform/resources/quayio-stage/apostille-rds-1.yml
+++ b/resources/terraform/resources/quayio-stage/apostille-rds-1.yml
@@ -11,6 +11,6 @@ backup_retention_period: 30
 storage_type: gp2
 multi_az: false
 engine_version: 9.6.22
-deletion_protection: true
+deletion_protection: false
 maintenance_window: Sat:03:00-Sat:03:30
 vpc_security_group_ids: ['sg-073fd10cc3db8df64']
