--- a/data/services/ocm/cs/cicd/saas-uhc-clusters-service.yaml
+++ b/data/services/ocm/cs/cicd/saas-uhc-clusters-service.yaml
@@ -121,7 +121,7 @@ resourceTemplates:
       FORCE_MIGRATION: ""
       LEADERSHIP_ENABLED: "false"
       JIRA_PROJECT: "SDAINT"
-      CLUSTER_ERROR_REPORT: "true"
+      CLUSTER_ERROR_REPORT: "false"
       JIRA_ISSUE_TYPE: "Bug"
       # comma separated string of Jira issue components
       JIRA_COMPONENTS: ""
@@ -136,7 +136,7 @@ resourceTemplates:
       # In case of rollback also change this to 1611852316.
       FORCE_MIGRATION: ""
       JIRA_PROJECT: "OHSS"
-      CLUSTER_ERROR_REPORT: "true"
+      CLUSTER_ERROR_REPORT: "false"
       JIRA_ISSUE_TYPE: "Incident"
       # comma separated string of Jira issue components
       JIRA_COMPONENTS: "Red Hat OpenShift Cluster Manager"
