--- a/data/services/insights/patchman/slo-documents/patchman-api-slo.yml
+++ b/data/services/insights/patchman/slo-documents/patchman-api-slo.yml
@@ -16,7 +16,7 @@ slos:
   SLODetails: https://github.com/RedHatInsights/patchman-engine
   SLOParameters:
     window: 28d
-  expr: 1.00 - (sum(rate(api_3scale_gateway_api_status{exported_service="patch", status="5xx"}[5m])) / sum(rate(api_3scale_gateway_api_status{exported_service="patch"}[5m])))
+  expr: 1.00 - (sum(rate(api_3scale_gateway_api_status{exported_service="patch", status="5xx"}[{{window}}])) / sum(rate(api_3scale_gateway_api_status{exported_service="patch"}[{{window}}])))
   SLOTarget: 0.90
   SLOTargetUnit: percent_0_1
   prometheusRules: resources/insights-prod/patchman-engine-prod/patchman-engine-prometheusrules.yaml
