move dsaas-production routes to openshift-acme

--- a/resources/dsaas/dsaas-production/che.route.yaml
+++ b/resources/dsaas/dsaas-production/che.route.yaml
@@ -1,6 +1,8 @@
 apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
+  annotations:
+    kubernetes.io/tls-acme: "true"
   labels:
     service: rhche-redirector
   name: che
