--- a/resources/dsaas/dsaas-production/openshift-io.route.yaml
+++ b/resources/dsaas/dsaas-production/openshift-io.route.yaml
@@ -5,6 +5,8 @@
 apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
+  annotations:
+    kubernetes.io/tls-acme: "true"
   labels:
     service: wwwopenshiftio
   name: openshift-io
