--- a/resources/dsaas/launchpad-production/launcher-application.route.yaml
+++ b/resources/dsaas/launchpad-production/launcher-application.route.yaml
@@ -1,6 +1,8 @@
 apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
+  annotations:
+    kubernetes.io/tls-acme: "true"
   labels:
     service: launcher-application
   name: launcher-application
