--- a/resources/app-sre/telemeter-production/telemeter-server-upload.route.yaml
+++ b/resources/app-sre/telemeter-production/telemeter-server-upload.route.yaml
@@ -1,6 +1,8 @@
 apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
+  annotations:
+    kubernetes.io/tls-acme: "true"
   name: telemeter-server-upload
 spec:
   host: infogw.api.openshift.com
