--- a/data/services/insights/notifications/deploy-clowder.yml
+++ b/data/services/insights/notifications/deploy-clowder.yml
@@ -70,7 +70,7 @@ resourceTemplates:
     ref: 53ead03fcbfdb914d424391e6c144c5f7c935e45
     parameters:
       # quay.io tag that will be deployed
-      IMAGE_TAG: 53ead03
+      IMAGE_TAG: '6949468'
       CLOUDWATCH_ENABLED: true
       CPU_REQUEST: 200m
       MIN_REPLICAS: 3
@@ -126,7 +126,7 @@ resourceTemplates:
     ref: 53ead03fcbfdb914d424391e6c144c5f7c935e45
     parameters:
       # quay.io tag that will be deployed
-      IMAGE_TAG: 53ead03
+      IMAGE_TAG: '6949468'
       CLOUDWATCH_ENABLED: true
       CPU_REQUEST: 200m
       CRONTAB_AGGREGATION_JOB: 0 * * * *
@@ -166,7 +166,7 @@ resourceTemplates:
     ref: e6bafdc551fece94dcbc89c4d2c5ffc562609992
     parameters:
       # quay.io tag that will be deployed
-      IMAGE_TAG: e6bafdc
+      IMAGE_TAG: ee17b1a
       CLOUDWATCH_ENABLED: true
       CPU_REQUEST: 200m
       MIN_REPLICAS: 3
