--- a/data/teams/che/users/okurinny.yml
+++ b/data/teams/che/users/okurinny.yml
@@ -9,3 +9,4 @@ github_username: akurinnoy
 
 roles:
 - $ref: /services/openshift.io/roles/dev-cluster.yml
+- $ref: /teams/devtools/roles/che-dev.yml
