--- a/data/openshift/insights/c-rh-c-eph/cluster.yml
+++ b/data/openshift/insights/c-rh-c-eph/cluster.yml
@@ -45,12 +45,12 @@ disable:
   integrations:
   - openshift-users
   # - openshift-groups
-  - openshift-resources
-  - openshift-rolebindings
+  # - openshift-resources
+  # - openshift-rolebindings
   # - openshift-network-policies
   # - openshift-namespaces
   # - openshift-namespace-labels
-  - openshift-limitranges
+  # - openshift-limitranges
   e2eTests:
   - create-namespace
   - dedicated-admin-rolebindings
