Update policies turnpike settings on stage

--- a/data/services/insights/turnpike/deploy.yml
+++ b/data/services/insights/turnpike/deploy.yml
@@ -202,12 +202,12 @@ resourceTemplates:
             x509: "x509['subject_dn'] == '/DC=com/DC=redhat/OU=messaging/OU=serviceusers/UID=msg-swatch-turnpike/L=stage/CN=msg-swatch-turnpike'"
         - name: policies-engine-stage
           route: /api/policies-engine/
-          origin: http://policies-engine.policies-stage.svc.cluster.local:8080/
+          origin: http://policies-engine-service.policies-stage.svc.cluster.local:8000/
           auth:
             saml: "'crc-policies-team' in user['Role']"
         - name: policies-ui-backend-stage
           route: /api/policies-ui-backend/
-          origin: http://policies-ui-backend.policies-stage.svc.cluster.local:8080/
+          origin: http://policies-ui-backend-service.policies-stage.svc.cluster.local:8000/
           auth:
             saml: "'crc-policies-team' in user['Role']"
         - name: notifications-stage
