Update policies monitoring settings on stage

--- a/resources/insights-stage/policies-stage/policies-ui-backend.servicemonitor.yml
+++ b/resources/insights-stage/policies-stage/policies-ui-backend.servicemonitor.yml
@@ -2,20 +2,17 @@
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
-  name: policies
+  name: policies-ui-backend
   labels:
     prometheus: app-sre
 spec:
   endpoints:
-  - interval: 15s
-    path: /metrics
-    port: policies-ui-backend
-  - interval: 15s
-    path: /metrics
-    port: policies-engine
+    - interval: 15s
+      path: /metrics
+      port: public
   namespaceSelector:
     matchNames:
-    - policies-stage
+      - policies-stage
   selector:
     matchLabels:
-      app: policies
+      app: policies-ui-backend
