--- a/resources/insights-stage/policies-stage/policies.prometheusrules.yaml
+++ b/resources/insights-stage/policies-stage/policies.prometheusrules.yaml
@@ -12,7 +12,7 @@ spec:
   - name: policies-stage
     rules:
       - alert: PoliciesEngineDownStage
-        expr: absent(up{service="policies-engine", namespace="policies-stage"}) or up{service="policies-engine", namespace="policies-stage"} == 0
+        expr: absent(up{service="policies-engine-service", namespace="policies-stage"}) or up{service="policies-engine-service", namespace="policies-stage"} == 0
         for: 5m
         labels:
           severity: medium
@@ -26,7 +26,7 @@ spec:
           description: "Policies Engine: Down in Stage for 5 minutes."
 
       - alert: PoliciesUiBackendDownStage
-        expr: up{endpoint='policies-ui-backend', namespace='policies-stage'} == 0
+        expr: up{endpoint='policies-ui-backend-service', namespace='policies-stage'} == 0
         for: 5m
         labels:
           severity: medium
