--- a/data/services/observability/namespaces/openshift-customer-monitoring.crcs02ue1.yml
+++ b/data/services/observability/namespaces/openshift-customer-monitoring.crcs02ue1.yml
@@ -107,7 +107,9 @@ openshiftResources:
 - provider: resource
   path: /insights-stage/ingress-stage/insights-ingress-service.servicemonitor.yml
 - provider: resource
-  path: /insights-stage/policies-stage/policies.servicemonitor.yml
+  path: /insights-stage/policies-stage/policies-engine.servicemonitor.yml
+- provider: resource
+  path: /insights-stage/policies-stage/policies-ui-backend.servicemonitor.yml
 - provider: resource
   path: /insights-stage/notifications-stage/notifications-backend.servicemonitor.yml
 - provider: resource
