Add entitlements-prod namespace for observability

--- a/data/services/observability/roles/app-sre-osdv4-monitored-namespaces-view.yml
+++ b/data/services/observability/roles/app-sre-osdv4-monitored-namespaces-view.yml
@@ -637,6 +637,9 @@ access:
     $ref: /services/insights/entitlements/namespaces/stage-entitlements-stage.yml
   role: view
 - namespace:
+    $ref: /services/insights/entitlements/namespaces/entitlements-prod.yml
+  role: view
+- namespace:
     $ref: /services/insights/prometheus/insights-push-stage.yml
   role: view
 - namespace:
