--- a/data/services/insights/strimzi/saas-perf.yml
+++ b/data/services/insights/strimzi/saas-perf.yml
@@ -14,6 +14,14 @@ app:
 pipelinesProvider:
   $ref: /services/insights/pipelines/tekton.crc-pipelines.app-sre-prod-01.yaml
 
+deployResources:
+  requests:
+    cpu: 200m
+    memory: 600Mi
+  limits:
+    cpu: 200m
+    memory: 600Mi
+
 slack:
   workspace:
     $ref: /dependencies/slack/coreos.yml
