--- a/data/services/insights/strimzi/saas.yml
+++ b/data/services/insights/strimzi/saas.yml
@@ -16,6 +16,14 @@ app:
 pipelinesProvider:
   $ref: /services/insights/strimzi/pipelines/strimzi-pipelines.app-sre-prod-01.yml
 
+deployResources:
+  requests:
+    cpu: 200m
+    memory: 600Mi
+  limits:
+    cpu: 200m
+    memory: 600Mi
+
 slack:
   workspace:
     $ref: /dependencies/slack/coreos.yml
