--- a/data/services/insights/strimzi/saas-perf.yml
+++ b/data/services/insights/strimzi/saas-perf.yml
@@ -94,7 +94,8 @@ resourceTemplates:
   targets:
   - namespace:
       $ref: /services/insights/strimzi/namespaces/perf-platform-mq-perf.yml
-    ref: master
+    # New images are broken because Dockerfile tries to pull from docker.io
+    ref: 6a7a8abca447a3576e6da47007a21ad776a1f6e1
     parameters:
       BOOTSTRAP_SERVERS: ${KAFKA_BOOTSTRAP_HOST}:9092
       AUTO_OFFSET_RESET: latest
