--- a/resources/observability/alertmanager/alertmanager-instance.secret.yaml
+++ b/resources/observability/alertmanager/alertmanager-instance.secret.yaml
@@ -426,6 +426,7 @@ data:
         routes:
         - match:
             severity: critical
+            environment: production
           receiver: pagerduty-app-sre
           continue: true
         - match:
@@ -441,6 +442,7 @@ data:
           continue: true
         - match:
             severity: high
+            environment: production
           receiver: slack-app-sre-alerts
         - match_re:
             severity: ^(warning|medium|info)$
