--- a/resources/quayio-stage/quay/quay.aggregation.prometheusrules.yaml
+++ b/resources/quayio-stage/quay/quay.aggregation.prometheusrules.yaml
@@ -11,6 +11,6 @@ spec:
   - name: quay-aggregation.rules
     rules:
     - record: "aggregation:quay_request_duration_seconds_bucket:rate5m:sum"
-      expr: sum(rate(quay_request_duration_seconds_bucket[5m])) by (le, route, method, status, service)
+      expr: sum(label_replace(rate(quay_request_duration_seconds_bucket[5m]), "src_service", "$1", "service", "(.+)"))  by (le, route, method, status, src_service)
     - record: "aggregation:quay_request_duration_seconds_count:rate1m:sum"
-      expr: sum(rate(quay_request_duration_seconds_count[1m])) by (route, status, method, service)
+      expr: sum(label_replace(rate(quay_request_duration_seconds_count[1m]), "src_service", "$1", "service", "(.+)")) by (route, status, method, src_service)
