add kafka cluster secret to crcs02ue1/platform-mq-stage

--- a/data/services/insights/strimzi/namespaces/stage-platform-mq-stage.yml
+++ b/data/services/insights/strimzi/namespaces/stage-platform-mq-stage.yml
@@ -132,3 +132,6 @@ openshiftResources:
   path: insights/secrets/insights-stage/strimzi-stage/mk-oauth-secret
   version: 3
   name: mk-oauth-secret
+
+kafkaCluster:
+  $ref: /kafka/crcs02ue1k/cluster.yml
