Force restart on policies-ui-backend

--- a/data/services/insights/policies/deploy-clowder.yml
+++ b/data/services/insights/policies/deploy-clowder.yml
@@ -159,6 +159,7 @@ resourceTemplates:
       IMAGE_TAG: 4c4faa0
       CLOUDWATCH_ENABLED: true
       SENTRY_ENABLED: true
+      RBAC_READ_TIMEOUT: 2001
 
   # fedramp-stage
   - namespace:
