Tweak validation params for xjoin eph

--- a/data/services/insights/xjoin/deploy-xjoin-operator.yml
+++ b/data/services/insights/xjoin/deploy-xjoin-operator.yml
@@ -141,7 +141,7 @@ resourceTemplates:
       $ref: /services/insights/xjoin/namespaces/xjoin-ephemeral.yml
     ref: master
     parameters:
-      LOG_LEVEL: "debug"
+      LOG_LEVEL: "info"
       TARGET_NAMESPACE: xjoin
       SOURCE_NAMESPACE: xjoin
       # Temporary until https://github.com/RedHatInsights/clowder/pull/390 is merged and released
@@ -171,6 +171,10 @@ resourceTemplates:
       MANAGER_POD_CPU_LIMIT: "2"
       MANAGER_POD_MEM_REQUESTS: "4Gi"
       MANAGER_POD_CPU_REQUESTS: "1"
+      VALIDATION_INTERVAL_INIT: "30"
+      VALIDATION_ATTEMPTS_THRESHOLD_INIT: "30"
+      VALIDATION_INTERVAL: "30"
+      VALIDATION_ATTEMPTS_THRESHOLD: "10"
     upstream:
       instance:
         $ref: /dependencies/ci-int/ci-int.yml
