--- a/data/services/observability/namespaces/app-sre-observability-production.yml
+++ b/data/services/observability/namespaces/app-sre-observability-production.yml
@@ -343,10 +343,16 @@ openshiftResources:
   path: /observability/grafana/grafana-dashboard-quay.configmap.yaml
   validate_json: true
 - provider: resource
+  path: /observability/grafana/grafana-dashboard-quay-by-service.configmap.yaml
+  validate_json: true
+- provider: resource
   path: /observability/grafana/grafana-dashboard-quayio-prod-aws-resources.configmap.yaml
   validate_json: true
 - provider: resource
   path: /observability/grafana/grafana-dashboard-quay-api.configmap.yaml
+  validate_json: true
+- provider: resource
+  path: /observability/grafana/grafana-dashboard-quay-apis-by-service.configmap.yaml
   validate_json: true
 - provider: resource
   path: /observability/grafana/grafana-dashboard-deadmanssnitch-operator.configmap.yaml
