--- a/data/integrations/qontract-reconcile-terraform-aws-route53.yml
+++ b/data/integrations/qontract-reconcile-terraform-aws-route53.yml
@@ -17,6 +17,7 @@ schemas:
 - /dependencies/dependency-1.yml
 - /dependencies/dns-zone-1.yml
 - /aws/account-1.yml
+- /aws/vpc-1.yml
 - /aws/ecr-1.yml
 - /openshift/cluster-1.yml
 - /dependencies/github-org-1.yml
