--- a/data/aws/app-sre/dns/devshift.net.yaml
+++ b/data/aws/app-sre/dns/devshift.net.yaml
@@ -51,7 +51,7 @@ records:
 # https://issues.redhat.com/browse/APPSRE-4156
 - name: fedramp
   type: NS
-  record:
+  records:
   - ns-0.awsdns-us-gov-00.com
   - ns-1024.awsdns-us-gov-00.org
   - ns-1536.awsdns-us-gov-00.us
