fix github_username for ngillett

--- a/data/teams/dynamo/users/ngillett.yml
+++ b/data/teams/dynamo/users/ngillett.yml
@@ -5,7 +5,7 @@ labels: {}
 
 name: Nathan Gillett
 org_username: ngillett
-github_username: nathanegillett
+github_username: negillett
 
 roles:
 - $ref: /services/observability/roles/observability-access.yml
