--- a/data/services/insights/ccx-data-pipeline/deploy.yml
+++ b/data/services/insights/ccx-data-pipeline/deploy.yml
@@ -132,6 +132,8 @@ resourceTemplates:
       MIN_REPLICAS: "2"
       MAX_REPLICAS: "6"
       HABERDASHER_KAFKA_BOOTSTRAP: ${KAFKA_BOOTSTRAP_HOST}:9092
+      IRSP_ENABLE_INTERNAL_ORGANIZATIONS: true
+      IRSP_INTERNAL_RULES_ORGANIZATIONS_CSV_FILE: "/cdapp/internal_rules_organizations.csv"
       AMS_API_URL: https://api.openshift.com
       DEBUG: false
   - namespace:
