--- a/data/services/app-interface/cicd/ci-ext/saas-qontract-server.yaml
+++ b/data/services/app-interface/cicd/ci-ext/saas-qontract-server.yaml
@@ -35,10 +35,12 @@ resourceTemplates:
   path: /openshift/app-interface.yaml
   parameters:
     IMAGE_GATE_TAG: bfa0da9
-    CPU_REQUESTS: 600m
-    CPU_LIMIT: 900m
+    CPU_REQUESTS: 1500m
+    CPU_LIMIT: 1500m
     MEMORY_REQUESTS: 512Mi
     MEMORY_LIMIT: 1Gi
+    GATE_CPU_REQUESTS: 100m
+    GATE_CPU_LIMITS: 100m
     S3RELOADER_CPU_REQUESTS: 15m
     S3RELOADER_CPU_LIMIT: 30m
     REPLICAS: 3
