hccm: promote 03c202e migration runner to prod

--- a/data/services/insights/hccm/deploy-clowder.yml
+++ b/data/services/insights/hccm/deploy-clowder.yml
@@ -247,8 +247,22 @@ resourceTemplates:
   # Production:
   - namespace:
       $ref: /services/insights/hccm/namespaces/hccm-prod.yml
-    ref: ce5299216601fd22a9a7f03d34252a4fd4b1da5f
+    ref: 03c202ee79217996822915263cb82ef7458edd28
     parameters:
+      ############# MIGRATIONS #############
+      # Change these settings when deploying migrations to Production
+      # Migrations Image Tag
+      DBM_IMAGE_TAG: 03c202e
+      # Migrations Invocation
+      DBM_INVOCATION: "00"
+      # Migration directive is optional and should be in the form of:
+      # <app>[:<migration>][,<app>[:<migration>]...]
+      # Ex: "reporting:0200,api:0050"
+      # Ex: "reporting:0200"
+      # Ex: "reporting"
+      # Ex: ""
+      _MIGRATION_DIRECTIVE: ""
+      ######################################
       IMAGE_TAG: ce52992
       APP_DOMAIN: apps.crcp01ue1.o9m8.p1.openshiftapps.com
       S3_BUCKET_NAME: hccm-prod-s3
@@ -345,18 +359,6 @@ resourceTemplates:
       WORKER_SUMMARY_CPU_LIMIT: 200m
       WORKER_SUMMARY_MEMORY_REQUEST: 512Mi
       WORKER_SUMMARY_MEMORY_LIMIT: 1Gi
-      # Change these settings when deploying migrations to Production
-      # Migrations Image Tag
-      # DBM_IMAGE_TAG: x
-      # Migrations Invocation
-      # DBM_INVOCATION: "00"
-      # Migration directive is optional and should be in the form of:
-      # <app>[:<migration>][,<app>[:<migration>]...]
-      # Ex: "reporting:0200,api:0050"
-      # Ex: "reporting:0200"
-      # Ex: "reporting"
-      # Ex: ""
-      # _MIGRATION_DIRECTIVE: ""
 
 - name: hive-metastore
   path: /deploy/clowdapp.yaml
