--- a/data/services/cincinnati/cicd/ci-int/saas.yaml
+++ b/data/services/cincinnati/cicd/ci-int/saas.yaml
@@ -53,8 +53,8 @@ resourceTemplates:
         $ref: /dependencies/ci-int/ci-int.yml
       name: openshift-cincinnati-gh-build-master
     parameters:
-      GB_LOG_VERBOSITY: "vvv"
-      PE_LOG_VERBOSITY: "vv"
+      GB_LOG_VERBOSITY: "v"
+      PE_LOG_VERBOSITY: "v"
       REPLICAS: 2
   - namespace:
       $ref: /services/cincinnati/namespaces/cincinnati-production.yml
@@ -64,3 +64,4 @@ resourceTemplates:
       PE_LOG_VERBOSITY: "v"
       PE_MEMORY_LIMIT: "1G"
       REPLICAS: 3
+      GB_PAUSE_SECS: 12000
