rollback metastore in stage

--- a/data/services/insights/hccm/deploy-clowder.yml
+++ b/data/services/insights/hccm/deploy-clowder.yml
@@ -384,9 +384,9 @@ resourceTemplates:
       S3_BUCKET_NAME: hccm-eph-s3
   - namespace:
       $ref: /services/insights/hccm/namespaces/stage-hccm-stage.yml
-    ref: c48bf4b62c8e01e6bdb9729ffbba02de2d9b4872
+    ref: f4ee0ba734092212e3cd0d479a48c2e6ef9f484d
     parameters:
-      IMAGE_TAG: 3.1.2-metastore-001
+      IMAGE_TAG: 3.1.2-005
       S3_BUCKET_NAME: hccm-stage-s3
       CPU_REQUEST: 200m
       CPU_LIMIT: 500m
