cincinnati: double memory limits

--- a/data/services/cincinnati/cicd/ci-int/saas.yaml
+++ b/data/services/cincinnati/cicd/ci-int/saas.yaml
@@ -60,8 +60,9 @@ resourceTemplates:
       $ref: /services/cincinnati/namespaces/cincinnati-production.yml
     ref: f1d4ef471549d048501774b91cadd58f4c02dd37
     parameters:
+      GB_MEMORY_LIMIT: "1.5Gi"
+      PE_MEMORY_LIMIT: "2Gi"
       GB_LOG_VERBOSITY: "v"
       PE_LOG_VERBOSITY: "v"
-      PE_MEMORY_LIMIT: "1G"
       REPLICAS: 3
       GB_PAUSE_SECS: 12000
