--- a/data/teams/app-sre/roles/app-sre.yml
+++ b/data/teams/app-sre/roles/app-sre.yml
@@ -52,6 +52,9 @@ access:
 - cluster:
     $ref: /openshift/appsrep05ue1/cluster.yml
   group: dedicated-admins
+- cluster:
+    $ref: /openshift/appsrep06ue2/cluster.yml
+  group: dedicated-admins
 ## AppSRE stage
 - cluster:
     $ref: /openshift/app-sre-stage-01/cluster.yml
