--- a/data/openshift/appsrep06ue2/cluster.yml
+++ b/data/openshift/appsrep06ue2/cluster.yml
@@ -50,7 +50,7 @@ spec:
 upgradePolicy:
   workloads:
   - ocm
-  schedule: 0 14 * * 1-5
+  schedule: 0 14 * * 1,3
   conditions:
     soakDays: 18
 
