add DNS entries for appsrep06ue2

--- a/data/aws/app-sre/dns/devshift.net.yaml
+++ b/data/aws/app-sre/dns/devshift.net.yaml
@@ -274,3 +274,11 @@ records:
 - {name: ci-int-jenkins-slave-16-app-interface.int, type: A, records: [10.0.135.211]}
 - {name: ci-int-jenkins-slave-17-app-interface.int, type: A, records: [10.0.134.45]}
 - {name: ci-int-jenkins-slave-18-rhel8.int, type: A, records: [10.0.132.161]}
+- name: prometheus.appsrep06ue2
+  type: CNAME
+  _target_cluster:
+    $ref: /openshift/appsrep06ue2/cluster.yml
+- name: alertmanager.appsrep06ue2
+  type: CNAME
+  _target_cluster:
+    $ref: /openshift/appsrep06ue2/cluster.yml
