--- a/data/openshift/appsrep06ue2/cluster.yml
+++ b/data/openshift/appsrep06ue2/cluster.yml
@@ -18,8 +18,8 @@ auth:
   org: app-sre
   team: appsrep06ue2-cluster
 
-# observabilityNamespace:
-#   $ref: /services/observability/namespaces/openshift-customer-monitoring.appsrep06ue2.yml
+observabilityNamespace:
+  $ref: /services/observability/namespaces/openshift-customer-monitoring.appsrep06ue2.yml
 
 ocm:
   $ref: /dependencies/ocm/production.yml
@@ -28,7 +28,7 @@ managedGroups:
 - dedicated-admins
 # - dedicated-readers
 
-# managedClusterRoles: true
+managedClusterRoles: true
 
 spec:
   id: 1p3kqdl7bohtrc3081o14svr5bclceno
