--- a/data/services/app-sre/cicd/ci-int/saas-openshift-acme.yaml
+++ b/data/services/app-sre/cicd/ci-int/saas-openshift-acme.yaml
@@ -239,7 +239,7 @@ resourceTemplates:
   # MAS SSO
   - namespace:
       $ref: /services/mas-sso/namespaces/mas-sso-stage.yml
-    ref: master     
+    ref: master
   - namespace:
       $ref: /services/mas-sso/namespaces/mas-sso-production.yml
     ref: d52fc8f622ce0b59c943eab021ad2538d5a3097d
@@ -314,4 +314,7 @@ resourceTemplates:
     ref: d52fc8f622ce0b59c943eab021ad2538d5a3097d
   - namespace:
       $ref: /services/rhobs/telemeter/namespaces/telemeter-stage.yml
+    ref: d52fc8f622ce0b59c943eab021ad2538d5a3097d
+  - namespace:
+      $ref: /openshift/appsrep06ue2/namespaces/app-sre-observability-per-cluster.yml
     ref: d52fc8f622ce0b59c943eab021ad2538d5a3097d
