--- a/data/services/observability/cicd/saas/saas-nginx-proxy.yaml
+++ b/data/services/observability/cicd/saas/saas-nginx-proxy.yaml
@@ -270,3 +270,10 @@ resourceTemplates:
       REPLICAS: 3
       ALERTMANAGER_SERVER_NAME: alertmanager.crcd01ue1.devshift.net
       PROMETHEUS_SERVER_NAME: prometheus.crcd01ue1.devshift.net
+  - namespace:
+      $ref: /openshift/appsrep06ue2/namespaces/app-sre-observability-per-cluster.yml
+    ref: 6855c0529f99016df464f50441e0de8082707c27
+    parameters:
+      REPLICAS: 3
+      ALERTMANAGER_SERVER_NAME: alertmanager.appsrep06ue2.devshift.net
+      PROMETHEUS_SERVER_NAME: prometheus.appsrep06ue2.devshift.net
