--- a/data/services/observability/roles/app-sre-osdv4-monitored-clusters-view.yml
+++ b/data/services/observability/roles/app-sre-osdv4-monitored-clusters-view.yml
@@ -107,3 +107,6 @@ access:
 - cluster:
     $ref: /openshift/che-dev/cluster.yml
   clusterRole: cluster-monitoring-view
+- cluster:
+    $ref: /openshift/appsrep06ue2/cluster.yml
+  clusterRole: cluster-monitoring-view
