--- a/data/services/observability/cicd/saas/saas-observability-per-cluster.yaml
+++ b/data/services/observability/cicd/saas/saas-observability-per-cluster.yaml
@@ -316,6 +316,13 @@ resourceTemplates:
       RETENTION: 28d
       PV_SIZE: 100Gi
 # Alertmanager
+  - namespace:
+      $ref: /services/observability/namespaces/openshift-customer-monitoring.appsrep06ue2.yml
+    parameters:
+      CLUSTER_LABEL: appsrep06ue2
+      ENVIRONMENT: production
+      EXTERNAL_URL: https://prometheus.appsrep06ue2.devshift.net
+    ref: c88c6fbb94cdf1489805a32997e613c89a48154e
 - name: alertmanager
   path: /openshift/alertmanager.template.yaml
   url: https://gitlab.cee.redhat.com/service/app-sre-observability
@@ -522,3 +529,9 @@ resourceTemplates:
     parameters:
       ENVIRONMENT: dev
       EXTERNAL_URL: https://alertmanager.crcd01ue1.devshift.net
+  - namespace:
+      $ref: /services/observability/namespaces/openshift-customer-monitoring.appsrep06ue2.yml
+    parameters:
+      ENVIRONMENT: production
+      EXTERNAL_URL: https://alertmanager.appsrep06ue2.devshift.net
+    ref: 452840a662c272e2e1bcba22e221683468a7467a
