--- a/data/services/observability/roles/observability-access-elevated.yml
+++ b/data/services/observability/roles/observability-access-elevated.yml
@@ -104,3 +104,6 @@ access:
 - namespace:
     $ref: /openshift/telemeter-prod-01/namespaces/app-sre-observability-per-cluster.yml
   role: view
+- namespace:
+    $ref: /openshift/appsrep06ue2/namespaces/app-sre-observability-per-cluster.yml
+  role: view
