--- a/resources/observability/grafana/grafana-datasources.secret.yaml
+++ b/resources/observability/grafana/grafana-datasources.secret.yaml
@@ -92,6 +92,36 @@ data:
                 "access": "proxy",
                 "editable": false,
                 "jsonData": {
+                    "httpHeaderName1": "Authorization"
+                },
+                "name": "appsrep06ue2-prometheus",
+                "orgId": 1,
+                "secureJsonData": {
+                    "httpHeaderValue1": "Bearer {{{ vault('app-sre/creds/kube-configs/appsrep06ue2', 'token') }}}"
+                },
+                "type": "prometheus",
+                "url": "https://prometheus.appsrep06ue2.devshift.net",
+                "version": 1
+            },
+            {
+                "access": "proxy",
+                "editable": false,
+                "jsonData": {
+                    "httpHeaderName1": "Authorization"
+                },
+                "name": "appsrep06ue2-cluster-prometheus",
+                "orgId": 1,
+                "secureJsonData": {
+                    "httpHeaderValue1": "Bearer {{{ vault('app-sre/creds/kube-configs/appsrep06ue2', 'token') }}}"
+                },
+                "type": "prometheus",
+                "url": "https://prometheus-k8s-openshift-monitoring.apps.appsrep06ue2.ohlz.p1.openshiftapps.com",
+                "version": 1
+            },
+            {
+                "access": "proxy",
+                "editable": false,
+                "jsonData": {
                     "tlsSkipVerify": true,
                     "httpHeaderName1": "Authorization"
                 },
@@ -1326,9 +1356,7 @@ data:
                     "type": "prometheus",
                     "url": "https://prometheus-k8s-openshift-monitoring.apps.crcd01ue1.8p0c.p1.openshiftapps.com",
                     "version": 1
-                },
-
-
+                }
         ]
     }
     {{% endb64encode %}}
