--- a/data/openshift/appsrep06ue2/cluster.yml
+++ b/data/openshift/appsrep06ue2/cluster.yml
@@ -8,10 +8,12 @@ name: appsrep06ue2
 description: app-sre OSDv4 production cluster
 consoleUrl: https://console-openshift-console.apps.appsrep06ue2.ohlz.p1.openshiftapps.com
 kibanaUrl: ''
-prometheusUrl: ''
-alertmanagerUrl: ''
 serverUrl: https://api.appsrep06ue2.ohlz.p1.openshiftapps.com:6443
 elbFQDN: elb.apps.appsrep06ue2.ohlz.p1.openshiftapps.com
+prometheusUrl: 'https://prometheus.appsrep06ue2.devshift.net'
+alertmanagerUrl: 'https://alertmanager.appsrep06ue2.devshift.net'
+serverUrl: ''
+elbFQDN: ''
 
 auth:
   service: github-org-team
