--- a/data/openshift/appsrep06ue2/cluster.yml
+++ b/data/openshift/appsrep06ue2/cluster.yml
@@ -12,8 +12,8 @@ serverUrl: https://api.appsrep06ue2.ohlz.p1.openshiftapps.com:6443
 elbFQDN: elb.apps.appsrep06ue2.ohlz.p1.openshiftapps.com
 prometheusUrl: 'https://prometheus.appsrep06ue2.devshift.net'
 alertmanagerUrl: 'https://alertmanager.appsrep06ue2.devshift.net'
-serverUrl: ''
-elbFQDN: ''
+serverUrl: 'https://api.appsrep06ue2.ohlz.p1.openshiftapps.com:6443'
+elbFQDN: 'elb.apps.appsrep06ue2.ohlz.p1.openshiftapps.com'
 
 auth:
   service: github-org-team
