--- a/data/services/observability/namespaces/openshift-customer-monitoring.appsrep06ue2.yml
+++ b/data/services/observability/namespaces/openshift-customer-monitoring.appsrep06ue2.yml
@@ -91,3 +91,28 @@ openshiftResources:
   variables:
     environment: production
     namespace: deployment-validation-operator
+
+### Cincinnati
+- provider: resource
+  path: /observability/prometheusrules/cincinnati-production.prometheusrules.yaml
+#### Cincinnati SLO rules
+- provider: resource-template
+  path: /observability/prometheusrules/cincinnati-slo.prometheusrules.yaml
+  type: extracurlyjinja2
+  variables:
+    namespace: cincinnati-stage
+    route: cincinnati-route-prod
+#### Cincinnati- Policy Engine
+- provider: resource-template
+  type: jinja2
+  path: /observability/servicemonitors/cincinnati-policy-engine.servicemonitor.yaml
+  variables:
+    environment: production
+    namespace: cincinnati-production
+##### Cincinnati- Graph Builder
+- provider: resource-template
+  type: jinja2
+  path: /observability/servicemonitors/cincinnati-graph-builder.servicemonitor.yaml
+  variables:
+    environment: production
+    namespace: cincinnati-production
