--- a/resources/observability/prometheusrules/cincinnati-production.prometheusrules.yaml
+++ b/resources/observability/prometheusrules/cincinnati-production.prometheusrules.yaml
@@ -14,9 +14,9 @@ spec:
     - alert: Cincinnati Graph Builder - No targets found - production
       annotations:
         runbook: "https://gitlab.cee.redhat.com/service/app-interface/tree/master/docs/cincinnati/sop/"
-        dashboard: "https://grafana.app-sre.devshift.net/d/cincinnati/cincinnati?orgId=1"
+        dashboard: "https://grafana.app-sre.devshift.net/d/cincinnati/cincinnati?orgId=1&var-datasource=appsrep06ue2-prometheus"
         message: "No valid targets found for Cincinnati Graph builder. Either no pods are running or Prometheus was not able to scrape them"
-        link_url: "https://console-openshift-console.apps.app-sre-prod-04.i5h0.p1.openshiftapps.com/k8s/ns/cincinnati-production/pods"
+        link_url: "https://console-openshift-console.apps.appsrep06ue2.ohlz.p1.openshiftapps.com/k8s/ns/cincinnati-production/pods"
       expr: absent(up{job="cincinnati-graph-builder", namespace="cincinnati-production"} == 1)
       for: 1m
       labels:
@@ -25,9 +25,9 @@ spec:
     - alert: Cincinnati Policy Engine - No targets found - production
       annotations:
         runbook: "https://gitlab.cee.redhat.com/service/app-interface/tree/master/docs/cincinnati/sop/"
-        dashboard: "https://grafana.app-sre.devshift.net/d/cincinnati/cincinnati?orgId=1"
+        dashboard: "https://grafana.app-sre.devshift.net/d/cincinnati/cincinnati?orgId=1&var-datasource=appsrep06ue2-prometheus"
         message: "No valid targets found for Cincinnati policy-engine. Either no pods are running or Prometheus was not able to scrape them"
-        link_url: "https://console-openshift-console.apps.app-sre-prod-04.i5h0.p1.openshiftapps.com/k8s/ns/cincinnati-production/pods"
+        link_url: "https://console-openshift-console.apps.appsrep06ue2.ohlz.p1.openshiftapps.com/k8s/ns/cincinnati-production/pods"
       expr: absent(up{job="cincinnati-policy-engine", namespace="cincinnati-production"} == 1)
       for: 1m
       labels:
@@ -36,9 +36,9 @@ spec:
     - alert: GBUpstreamScrapesHalted
       annotations:
         runbook: "https://gitlab.cee.redhat.com/service/app-interface/tree/master/docs/cincinnati/sop/"
-        dashboard: "https://grafana.app-sre.devshift.net/d/cincinnati/cincinnati?orgId=1"
+        dashboard: "https://grafana.app-sre.devshift.net/d/cincinnati/cincinnati?orgId=1&var-datasource=appsrep06ue2-prometheus"
         message: "Cincinnati graph-builder upstream scrapes are not functioning"
-        link_url: "https://console-openshift-console.apps.app-sre-prod-04.i5h0.p1.openshiftapps.com/k8s/ns/cincinnati-production/pods"
+        link_url: "https://console-openshift-console.apps.appsrep06ue2.ohlz.p1.openshiftapps.com/k8s/ns/cincinnati-production/pods"
       expr: rate(cincinnati_gb_graph_upstream_scrapes_total{job="cincinnati-graph-builder",namespace="cincinnati-production"}[5m]) == 0
       for: 15m
       labels:
@@ -47,9 +47,9 @@ spec:
     - alert: GBUpstreamScrapeErrors
       annotations:
         runbook: "https://gitlab.cee.redhat.com/service/app-interface/tree/master/docs/cincinnati/sop/"
-        dashboard: "https://grafana.app-sre.devshift.net/d/cincinnati/cincinnati?orgId=1"
+        dashboard: "https://grafana.app-sre.devshift.net/d/cincinnati/cincinnati?orgId=1&var-datasource=appsrep06ue2-prometheus"
         message: "High error rate for Cincinnati graph-builder scrapes"
-        link_url: "https://console-openshift-console.apps.app-sre-prod-04.i5h0.p1.openshiftapps.com/k8s/ns/cincinnati-production/pods"
+        link_url: "https://console-openshift-console.apps.appsrep06ue2.ohlz.p1.openshiftapps.com/k8s/ns/cincinnati-production/pods"
       expr: rate(cincinnati_gb_graph_upstream_errors_total{job="cincinnati-graph-builder",namespace="cincinnati-production"}[5m]) != 0
       for: 15m
       labels:
@@ -58,7 +58,7 @@ spec:
     - alert: GBRestart
       annotations:
         runbook: "https://gitlab.cee.redhat.com/service/app-interface/tree/master/docs/cincinnati/sop/"
-        dashboard: "https://grafana.app-sre.devshift.net/d/cincinnati/cincinnati?orgId=1"
+        dashboard: "https://grafana.app-sre.devshift.net/d/cincinnati/cincinnati?orgId=1&var-datasource=appsrep06ue2-prometheus"
         message: "Graph builder container has restarted"
         link_url: "https://console-openshift-console.apps.app-sre-stage-0.k3s7.p1.openshiftapps.com/k8s/ns/cincinnati-stage/pods"
       expr: |
@@ -70,9 +70,9 @@ spec:
     - alert: PEIncomingRequestsHalted
       annotations:
         runbook: "https://gitlab.cee.redhat.com/service/app-interface/tree/master/docs/cincinnati/sop/"
-        dashboard: "https://grafana.app-sre.devshift.net/d/cincinnati/cincinnati?orgId=1"
+        dashboard: "https://grafana.app-sre.devshift.net/d/cincinnati/cincinnati?orgId=1&var-datasource=appsrep06ue2-prometheus"
         message: "Cincinnati policy-engine is not receiving/processing requests"
-        link_url: "https://console-openshift-console.apps.app-sre-prod-04.i5h0.p1.openshiftapps.com/k8s/ns/cincinnati-production/pods"
+        link_url: "https://console-openshift-console.apps.appsrep06ue2.ohlz.p1.openshiftapps.com/k8s/ns/cincinnati-production/pods"
       expr: rate(cincinnati_pe_v1_graph_incoming_requests_total{job="cincinnati-policy-engine",namespace="cincinnati-production"}[5m]) == 0
       for: 5m
       labels:
@@ -81,9 +81,9 @@ spec:
     - alert: PEUpstreamErrors
       annotations:
         runbook: "https://gitlab.cee.redhat.com/service/app-interface/tree/master/docs/cincinnati/sop/"
-        dashboard: "https://grafana.app-sre.devshift.net/d/cincinnati/cincinnati?orgId=1"
+        dashboard: "https://grafana.app-sre.devshift.net/d/cincinnati/cincinnati?orgId=1&var-datasource=appsrep06ue2-prometheus"
         message: "Cincinnati policy-engine is receiving an high error rate from upstream graph-builder"
-        link_url: "https://console-openshift-console.apps.app-sre-prod-04.i5h0.p1.openshiftapps.com/k8s/ns/cincinnati-production/pods"
+        link_url: "https://console-openshift-console.apps.appsrep06ue2.ohlz.p1.openshiftapps.com/k8s/ns/cincinnati-production/pods"
       expr: rate(cincinnati_pe_http_upstream_errors_total{job="cincinnati-policy-engine",namespace="cincinnati-production"}[5m]) != 0
       for: 5m
       labels:
@@ -92,9 +92,9 @@ spec:
     - alert: PEGraphResponseErrors
       annotations:
         runbook: "https://gitlab.cee.redhat.com/service/app-interface/tree/master/docs/cincinnati/sop/"
-        dashboard: "https://grafana.app-sre.devshift.net/d/cincinnati/cincinnati?orgId=1"
+        dashboard: "https://grafana.app-sre.devshift.net/d/cincinnati/cincinnati?orgId=1&var-datasource=appsrep06ue2-prometheus"
         message: "High error rate (kind {{ $labels.kind  }}) for Cincinnati policy-engine graph endpoint"
-        link_url: "https://console-openshift-console.apps.app-sre-prod-04.i5h0.p1.openshiftapps.com/k8s/ns/cincinnati-production/pods"
+        link_url: "https://console-openshift-console.apps.appsrep06ue2.ohlz.p1.openshiftapps.com/k8s/ns/cincinnati-production/pods"
       # NOTE(lucab): threshold accounts for baseline errors from ancient/broken/development clients.
       expr: rate(cincinnati_pe_v1_graph_response_errors_total{job="cincinnati-policy-engine",namespace="cincinnati-production"}[5m]) > 0.015
       for: 5m
@@ -104,7 +104,7 @@ spec:
     - alert: PERestart
       annotations:
         runbook: "https://gitlab.cee.redhat.com/service/app-interface/tree/master/docs/cincinnati/sop/"
-        dashboard: "https://grafana.app-sre.devshift.net/d/cincinnati/cincinnati?orgId=1"
+        dashboard: "https://grafana.app-sre.devshift.net/d/cincinnati/cincinnati?orgId=1&var-datasource=appsrep06ue2-prometheus"
         message: "Policy engine container has restarted"
         link_url: "https://console-openshift-console.apps.app-sre-stage-0.k3s7.p1.openshiftapps.com/k8s/ns/cincinnati-stage/pods"
       expr: |
