added ui images mirror and new ui build job

--- a/data/services/codeready-analytics/cicd/jobs.yaml
+++ b/data/services/codeready-analytics/cicd/jobs.yaml
@@ -80,6 +80,10 @@ config:
     - 'gh-build-master':
         gh_repo: fabric8-analytics-stack-report-ui
         display_name: fabric8-analytics fabric8-analytics-stack-report-ui build master
+    - 'gh-build-master':
+        branch: revamp
+        gh_repo: fabric8-analytics-stack-report-ui
+        display_name: fabric8-analytics fabric8-analytics-stack-report-ui build revamp
 
 # RHEL images
 - project:
