--- a/data/services/codeready-analytics/app.yml
+++ b/data/services/codeready-analytics/app.yml
@@ -98,8 +98,8 @@ quayRepos:
     public: true
     mirror:
       $ref: /dependencies/image-mirrors/quay.io/openshiftio/rhel-fabric8-analytics-stack-report-ui.yml
-  - name: rhel-basefabric8-analytics-stack-report-ui
-    description: fabric8 analytics stack report is a stack analysis feature
+  - name: rhel-base-fabric8-analytics-stack-report-ui
+    description: fabric8 analytics stack report base image
     public: true
     mirror:
       $ref: /dependencies/image-mirrors/quay.io/openshiftio/rhel-base-fabric8-analytics-stack-report-ui.yml
