--- a/data/services/cincinnati/cicd/ci-int/saas.yaml
+++ b/data/services/cincinnati/cicd/ci-int/saas.yaml
@@ -62,7 +62,9 @@ resourceTemplates:
     parameters:
       GB_MEMORY_LIMIT: "1.5Gi"
       PE_MEMORY_LIMIT: "2Gi"
+      GB_CPU_LIMIT: "2"
+      PE_CPU_LIMIT: "2"
       GB_LOG_VERBOSITY: "vvv"
       PE_LOG_VERBOSITY: "vv"
-      REPLICAS: 8
+      REPLICAS: 10
       GB_PAUSE_SECS: 12000
