hccm: upgrade standalone hive in prod

--- a/data/services/insights/hccm/deploy-clowder.yml
+++ b/data/services/insights/hccm/deploy-clowder.yml
@@ -394,9 +394,9 @@ resourceTemplates:
       MEMORY_LIMIT: 2Gi
   - namespace:
       $ref: /services/insights/hccm/namespaces/hccm-prod.yml
-    ref: f4ee0ba734092212e3cd0d479a48c2e6ef9f484d
+    ref: ade2150d1a513f202f872b24318e186fc82229fe
     parameters:
-      IMAGE_TAG: 3.1.2-005
+      IMAGE_TAG: 3.1.2-metastore-002
       MIN_REPLICAS: 1
       S3_BUCKET_NAME: hccm-prod-s3
       CPU_REQUEST: 200m
