create nginx-proxy-cache saas file

--- a/data/teams/app-sre/roles/app-sre.yml
+++ b/data/teams/app-sre/roles/app-sre.yml
@@ -272,4 +272,4 @@ owned_saas_files:
 # test-saas-deployment-pipelines
 - $ref: /services/test-saas-deployment-pipelines/cicd/deploy.yml
 # - $ref: /services/test-saas-deployment-pipelines/cicd/post-deploy.yml
-
+- $ref: /services/app-sre/cicd/ci-ext/saas-nginx-proxy-cache.yaml
