POL-619 Update policies monitoring settings on prod

--- a/data/services/observability/namespaces/openshift-customer-monitoring.crcp01ue1.yml
+++ b/data/services/observability/namespaces/openshift-customer-monitoring.crcp01ue1.yml
@@ -124,7 +124,9 @@ openshiftResources:
 - provider: resource
   path: /insights-prod/compliance-prod/compliance-prometheus-exporter.servicemonitor.yml
 - provider: resource
-  path: /insights-prod/policies-prod/policies.servicemonitor.yml
+  path: /insights-prod/policies-prod/policies-engine.servicemonitor.yml
+- provider: resource
+  path: /insights-prod/policies-prod/policies-ui-backend.servicemonitor.yml
 - provider: resource
   path: /insights-prod/notifications-prod/notifications-backend.servicemonitor.yml
 - provider: resource
