--- a/resources/insights-prod/policies-prod/policies.prometheusrules.yaml
+++ b/resources/insights-prod/policies-prod/policies.prometheusrules.yaml
@@ -12,7 +12,7 @@ spec:
   - name: policies-prod
     rules:
       - alert: PoliciesEngineDownProd
-        expr: absent(up{service="policies-engine", namespace="policies-prod"}) or up{service="policies-engine", namespace="policies-prod"} == 0
+        expr: absent(up{service="policies-engine-service", namespace="policies-prod"}) or up{service="policies-engine-service", namespace="policies-prod"} == 0
         for: 5m
         labels:
           severity: medium
@@ -26,7 +26,7 @@ spec:
           description: "Policies Engine: Down in PROD for 5 minutes."
 
       - alert: PoliciesUiBackendDownProd
-        expr: up{endpoint='policies-ui-backend', namespace='policies-prod'} == 0
+        expr: up{endpoint='policies-ui-backend-service', namespace='policies-prod'} == 0
         for: 5m
         labels:
           severity: medium
