POL-619 Update policies turnpike settings on prod

--- a/data/services/insights/turnpike/deploy.yml
+++ b/data/services/insights/turnpike/deploy.yml
@@ -636,12 +636,12 @@ resourceTemplates:
         #     saml: "'cost-management-team' in user['Role']"
         - name: policies-engine-prod
           route: /api/policies-engine/
-          origin: http://policies-engine.policies-prod.svc.cluster.local:8080/
+          origin: http://policies-engine-service.policies-prod.svc.cluster.local:8000/
           auth:
             saml: "'crc-policies-team' in user['Role']"
         - name: policies-ui-backend-prod
           route: /api/policies-ui-backend/
-          origin: http://policies-ui-backend.policies-prod.svc.cluster.local:8080/
+          origin: http://policies-ui-backend-service.policies-prod.svc.cluster.local:8000/
           auth:
             saml: "'crc-policies-team' in user['Role']"
         - name: notifications-prod
