--- a/data/services/app-sre/cicd/ci-ext/saas-nginx-proxy-cache.yaml
+++ b/data/services/app-sre/cicd/ci-ext/saas-nginx-proxy-cache.yaml
@@ -37,5 +37,9 @@ resourceTemplates:
   - namespace:
       $ref: /services/cincinnati/namespaces/cincinnati-stage.yml
     ref: master
+    upstream:
+      instance:
+        $ref: /dependencies/ci-int/ci-int.yml
+      name: app-sre-nginx-proxy-cache-gh-build-master
     parameters:
       REPLICAS: 1
