--- a/data/services/app-sre/cicd/ci-ext/saas-nginx-proxy-cache.yaml
+++ b/data/services/app-sre/cicd/ci-ext/saas-nginx-proxy-cache.yaml
@@ -29,7 +29,7 @@ imagePatterns:
 resourceTemplates:
 - name: nginx-proxy-cache
   url: https://github.com/app-sre/nginx-proxy-cache
-  path: openshift.yaml
+  path: /openshift.yaml
   parameters:
     PROXY_DESTINATION: cincinnati-policy-engine:8081
     PROXY_CACHE_VALID: 60m
