POL-619 Deploy policies with Clowder on prod

--- a/data/services/insights/policies/deploy.yml
+++ b/data/services/insights/policies/deploy.yml
@@ -51,6 +51,7 @@ resourceTemplates:
       SENTRY_ENABLED: true
   - namespace:
       $ref: /services/insights/policies/namespaces/policies-prod.yml
+    disable: true
     ref: 812cb0ce9abd57be3fbc489d377b70aa41d9d43a
     parameters:
       IMAGE_TAG: 19ed1eb
