--- a/data/services/managed-services/cicd/saas/saas-kas-fleet-manager.yaml
+++ b/data/services/managed-services/cicd/saas/saas-kas-fleet-manager.yaml
@@ -13,6 +13,14 @@ app:
 pipelinesProvider:
   $ref: /services/managed-services/pipelines/tekton.kas-fleet-manager-pipelines.appsrep05ue1.yaml
 
+deployResources:
+  requests:
+    cpu: 300m
+    memory: 600Mi
+  limits:
+    cpu: 300m
+    memory: 600Mi
+
 slack:
   workspace:
     $ref: /dependencies/slack/coreos.yml
