refactor: rename jobs to reflect what they do accurately
The SonarQube scanner scans the code, it doesn't analyze it.

--- a/data/services/insights/sources/ci-int/build.yml
+++ b/data/services/insights/sources/ci-int/build.yml
@@ -24,10 +24,10 @@ config:
     gh_repo: sources-api-go
     quay_org: cloudservices
     jobs:
-    - "insights-sources-sonarqube-analysis":
-        display_name: sources-api-go sonarqube-analysis
+    - "insights-sources-sonarqube-scan":
+        display_name: sources-api-go sonarqube-scan
         branch: main
-    - "insights-sources-sonarqube-analysis-master":
+    - "insights-sources-sonarqube-scan-master":
         display_name: sources-api-go sonarqube-main
         branch: main
 - project:
@@ -38,10 +38,10 @@ config:
     gh_repo: sources-monitor-go
     quay_org: cloudservices
     jobs:
-    - "insights-sources-sonarqube-analysis":
-        display_name: sources-monitor-go sonarqube-analysis
+    - "insights-sources-sonarqube-scan":
+        display_name: sources-monitor-go sonarqube-scan
         branch: main
-    - "insights-sources-sonarqube-analysis-master":
+    - "insights-sources-sonarqube-scan-master":
         display_name: sources-monitor-go sonarqube-main
         branch: main
 - project:
@@ -52,7 +52,7 @@ config:
     gh_repo: sources-superkey-worker
     quay_org: cloudservices
     jobs:
-    - "insights-sources-sonarqube-analysis":
-        display_name: sources-superkey-worker sonarqube-analysis
-    - "insights-sources-sonarqube-analysis-master":
+    - "insights-sources-sonarqube-scan":
+        display_name: sources-superkey-worker sonarqube-scan
+    - "insights-sources-sonarqube-scan-master":
         display_name: sources-superkey-worker sonarqube-main
