refactor: add a meaningful name for the context and feedback messages
Insetad of having a generic "PR build" context which doesn't reflect
what the job is doing, a more specific "SonarQube scan" would help
identifying the different checks on the GitHub PRs. Also, the status
messages needed tweaking for this same reason.

--- a/resources/jenkins/insights/sources/ci-int/job-templates.yaml
+++ b/resources/jenkins/insights/sources/ci-int/job-templates.yaml
@@ -1,7 +1,7 @@
 - job-template:
-    status_context: "ci.int.devshift.net PR build"
     id: 'insights-sources-sonarqube-scan'
     name: '{gh_org}-{gh_repo}-sonarqube-scan'
+    status_context: "SonarQube scan"
     branch: "master"
     wrappers:
     - timeout_wrapper:
@@ -58,6 +58,9 @@
             - RedHatInsights
             allow-whitelist-orgs-as-admins: true
             status-context: '{status_context}'
+            error-status: 'Scan failed.'
+            failure-status: 'Scan failed.'
+            success-status: 'Scan succeeded.'
             white-list-target-branches:
             - '{white_list_target_branches}'
     <<: *pr_check_template
