proxy destination must be a url
Signed-off-by: Rafa Porres Molina <rporresm@redhat.com>

--- a/data/services/app-sre/cicd/ci-ext/saas-nginx-proxy-cache.yaml
+++ b/data/services/app-sre/cicd/ci-ext/saas-nginx-proxy-cache.yaml
@@ -31,7 +31,7 @@ resourceTemplates:
   url: https://github.com/app-sre/nginx-proxy-cache
   path: /openshift.yaml
   parameters:
-    PROXY_DESTINATION: cincinnati-policy-engine:8081
+    PROXY_DESTINATION: http://cincinnati-policy-engine:8081
     PROXY_CACHE_VALID: 60m
   targets:
   - namespace:
