--- a/data/services/quayio/saas/quayio-utils.yaml
+++ b/data/services/quayio/saas/quayio-utils.yaml
@@ -13,6 +13,14 @@ app:
 pipelinesProvider:
   $ref: /services/quayio/pipelines/tekton.quayio-pipelines.app-sre-prod-01.yaml
 
+deployResources:
+  requests:
+    cpu: 300m
+    memory: 600Mi
+  limits:
+    cpu: 300m
+    memory: 600Mi
+
 slack:
   workspace:
     $ref: /dependencies/slack/coreos.yml
