Add clowder view ClusterRoles to ephemeral-users

--- a/data/teams/insights/roles/ephemeral-users.yml
+++ b/data/teams/insights/roles/ephemeral-users.yml
@@ -16,6 +16,15 @@ access:
   clusterRole: ephemeral-namespace-operator-editor
 - cluster:
     $ref: /openshift/insights/c-rh-c-eph/cluster.yml
+  clusterRole: clowder-clowdapp-viewer-role
+- cluster:
+    $ref: /openshift/insights/c-rh-c-eph/cluster.yml
+  clusterRole: clowder-clowdenvironment-viewer-role
+- cluster:
+    $ref: /openshift/insights/c-rh-c-eph/cluster.yml
+  clusterRole: clowder-clowdjobinvocation-viewer-role
+- cluster:
+    $ref: /openshift/insights/c-rh-c-eph/cluster.yml
   clusterRole: frontend-operator-frontendenvironment-viewer-role
 - namespace:
     $ref: /services/insights/clowder/namespaces/ephem.yml
