jiralert token instead of password

--- a/resources/services/observability/jiralert/jiralert-config.secret.yaml
+++ b/resources/services/observability/jiralert/jiralert-config.secret.yaml
@@ -22,7 +22,7 @@ data:
       # API access fields.
       api_url: {{{ vault('app-sre/creds/app-sre-jira-bot', 'url') }}}
       user: {{{ vault('app-sre/creds/app-sre-jira-bot', 'username') }}}
-      password: '{{{ vault('app-sre/creds/app-sre-jira-bot', 'password') }}}'
+      password: '{{{ vault('app-sre/creds/app-sre-jira-bot', 'token') }}}'
 
       issue_type: Task
       priority: Major
