--- a/data/services/image-builder/namespaces/workers-stage.yml
+++ b/data/services/image-builder/namespaces/workers-stage.yml
@@ -76,3 +76,53 @@ terraformResources:
   identifier: workers-aoc-staging
   defaults: /terraform/resources/image-builder/stage/cloudwatch-1.yml
   output_resource_name: workers-aoc-staging
+- provider: aws-iam-role
+  account: image-builder-stage
+  identifier: workers-aoc-staging-role
+  assume_role:
+    Service:
+    - ec2.amazonaws.com
+  inline_policy:
+    {
+      Version: "2012-10-17",
+      Statement: [
+        {
+          "Sid": "WorkerReadSecrets",
+          "Effect": "Allow",
+          "Action": [
+            "secretsmanager:GetResourcePolicy",
+            "secretsmanager:GetSecretValue",
+            "secretsmanager:DescribeSecret",
+            "secretsmanager:ListSecretVersionIds"
+          ],
+          "Resource": [
+            "arn:aws:secretsmanager:us-east-1:920877988636:secret:aws-account-xFcPpj",
+            "arn:aws:secretsmanager:us-east-1:920877988636:secret:azure-service-account-IF93Wk",
+            "arn:aws:secretsmanager:us-east-1:920877988636:secret:gcp-service-account-IF93Wk",
+            "arn:aws:secretsmanager:us-east-1:920877988636:secret:offline-token-4RDjer",
+            "arn:aws:secretsmanager:us-east-1:920877988636:secret:subscription-manager-command-xFcPpj"
+          ]
+        },
+        {
+          "Sid": "BasicCloudWatchUsage",
+          "Effect": "Allow",
+          "Action": [
+            "cloudwatch:PutMetricData",
+            "ec2:DescribeVolumes",
+            "ec2:DescribeTags",
+          ],
+          "Resource": "*",
+        },
+        {
+          "Sid": "CloudWatchDescribeLogStreams",
+          "Effect": "Allow",
+          "Action": [
+            "logs:PutLogEvents",
+            "logs:DescribeLogStreams",
+            "logs:CreateLogStream",
+          ],
+          "Resource": "arn:aws:logs:us-eas t-1:920877988636:log-group:workers-aoc-staging:*"
+        }
+      ]
+    }
+  output_resource_name: workers-aoc-staging-role
