--- a/data/dependencies/slack/coreos.yml
+++ b/data/dependencies/slack/coreos.yml
@@ -89,6 +89,7 @@ managedUsergroups:
 - app-sre-secondary
 - app-sre-emea
 - app-sre-nasa
+- app-sre-apac
 - sre-platform-primary
 - sre-platform-secondary
 - sre-platform-ic
