add TELEMETER_BASE_URL to all OSD environments

--- a/data/products/osdv4/environments/integration-hivei01ue1.yml
+++ b/data/products/osdv4/environments/integration-hivei01ue1.yml
@@ -20,3 +20,4 @@ parameters:
   OCM_BASE_URL: https://api.integration.openshift.com
   CONSOLE_BASE_URL: https://qaprodauth.cloud.redhat.com
   SSO_BASE_URL: https://sso.redhat.com/auth/realms/redhat-external
+  TELEMETER_BASE_URL: https://infogw-proxy.api.stage.openshift.com
