--- a/data/products/osdv4/environments/production-hivep05ue1.yml
+++ b/data/products/osdv4/environments/production-hivep05ue1.yml
@@ -20,6 +20,7 @@ parameters:
   OCM_BASE_URL: https://api.openshift.com
   CONSOLE_BASE_URL: https://console.redhat.com
   SSO_BASE_URL: https://sso.redhat.com/auth/realms/redhat-external
+  TELEMETER_BASE_URL: https://infogw-proxy.api.openshift.com
 
 dependsOn:
   $ref: /products/osdv4/environments/stage-01.yml
