--- a/data/products/osdv4/environments/ssotest01ue1.yml
+++ b/data/products/osdv4/environments/ssotest01ue1.yml
@@ -20,3 +20,4 @@ parameters:
   OCM_BASE_URL: https://api.apps.ssotest01ue1.a7a5.p1.openshiftapps.com
   CONSOLE_BASE_URL: https://qaprodauth.cloud.redhat.com
   SSO_BASE_URL: https://sso.stage.redhat.com/auth/realms/redhat-external
+  TELEMETER_BASE_URL: https://infogw-proxy.api.stage.openshift.com
