--- a/data/services/ocm/shared-resources/stage.yml
+++ b/data/services/ocm/shared-resources/stage.yml
@@ -27,6 +27,24 @@ openshiftResources:
     # this is a workaround to use the vault function inside the for loop in the template
     current_hive_cluster:
       name: 'workaround'
+- provider: resource-template
+  type: extracurlyjinja2
+  path: /services/ocm/stage/provision-shards.secret.yaml
+  variables:
+    shards:
+    - id: 77d087e6-bf7f-11ea-a6df-8c1645a911be
+      status: active
+      hive_cluster_name: hive-stage-01
+      hive_cluster_api_url: https://api.hive-stage-01.n1u3.p1.openshiftapps.com:6443
+      hive_cluster_api_url_slug: api-hive-stage-01-n1u3-p1-openshiftapps-com:6443
+    - id: 11015a3e-9e4d-4cf1-93d7-06fb2cf83a1c
+      status: active
+      hive_cluster_name: hives02ue1
+      hive_cluster_api_url: https://api.hives02ue1.j5l5.p1.openshiftapps.com:6443
+      hive_cluster_api_url_slug: api-hives02ue1-j5l5-p1-openshiftapps-com:6443
+    # this is a workaround to use the vault function inside the for loop in the template
+    current_hive_cluster:
+      name: 'workaround'
 # the `telemeter.bearer` key in uhc-acct-mngr-tpl is the telemeter-stage/uhc-prometheus-access SA's token
 - provider: resource-template
   type: extracurlyjinja2
