consolidate provision-shards secret to a single template

--- a/data/services/ocm/namespaces/uhc-integration.yml
+++ b/data/services/ocm/namespaces/uhc-integration.yml
@@ -49,8 +49,10 @@ openshiftResources:
       name: 'workaround'
 - provider: resource-template
   type: extracurlyjinja2
-  path: /services/ocm/integration/provision-shards.secret.yaml
+  path: /services/ocm/provision-shards.secret.yaml
   variables:
+    aws_base_domain: i1.devshift.org
+    gcp_base_domain: i2.devshift.org
     shards:
     - id: e6bc4f5c-bb10-46e4-99d1-fc92b9f3df91
       status: active
