--- a/data/services/ocm/shared-resources/stage.yml
+++ b/data/services/ocm/shared-resources/stage.yml
@@ -29,8 +29,10 @@ openshiftResources:
       name: 'workaround'
 - provider: resource-template
   type: extracurlyjinja2
-  path: /services/ocm/stage/provision-shards.secret.yaml
+  path: /services/ocm/provision-shards.secret.yaml
   variables:
+    aws_base_domain: s1.devshift.org
+    gcp_base_domain: s2.devshift.org
     shards:
     - id: 77d087e6-bf7f-11ea-a6df-8c1645a911be
       status: active
