--- a/resources/services/ocm/provision-shards.secret.yaml
+++ b/resources/services/ocm/provision-shards.secret.yaml
@@ -66,7 +66,8 @@ data:
         - name: system:serviceaccount:gcp-project-operator:gcp-project-operator-client/{{{ shard.hive_cluster_api_url_slug }}}
           user:
             token: {{{ vault('app-sre/integrations-output/openshift-serviceaccount-tokens/shared-resources/{{ current_hive_cluster.name }}-gcp-project-operator-gcp-project-operator-client', 'token') }}}
-      aws_base_domain: s1.devshift.org
-      gcp_base_domain: s2.devshift.org
+      aws_base_domain: {{{ aws_base_domain }}}
+      gcp_base_domain: {{{ gcp_base_domain }}}
+      status: {{{ shard.status }}}
     {{%- endfor %}}
     {{% endb64encode %}}
