--- a/data/services/ocm/shared-resources/production.yml
+++ b/data/services/ocm/shared-resources/production.yml
@@ -48,8 +48,10 @@ openshiftResources:
       name: 'workaround'
 - provider: resource-template
   type: extracurlyjinja2
-  path: /services/ocm/production/provision-shards.secret.yaml
+  path: /services/ocm/provision-shards.secret.yaml
   variables:
+    aws_base_domain: p1.openshiftapps.com
+    gcp_base_domain: p2.openshiftapps.com
     shards:
     - id: 7c2626e2-da06-11ea-8f62-8c1645a911be
       status: active
