Fix units used in infra-env TTL, as days are not supported

--- a/data/services/assisted-installer/cicd/saas.yaml
+++ b/data/services/assisted-installer/cicd/saas.yaml
@@ -322,7 +322,7 @@ resourceTemplates:
       ENABLE_DEREGISTER_INACTIVE_GC: 168h
       IMAGE_SERVICE_BASE_URL: ${OCM_BASE_URL}/api/assisted-images
       MAX_GC_INFRAENVS_PER_INTERVAL: "10000"
-      INFRAENV_DELETED_INACTIVE_AFTER: 7d
+      INFRAENV_DELETED_INACTIVE_AFTER: 168h
   - namespace:
       $ref: /services/assisted-installer/namespaces/assisted-installer-production.yml
     ref: 22b427946860c6c7b9e76242d0b6a93464bd1b72
