rename file name to config

--- a/resources/services/ocm/provision-shards.secret.yaml
+++ b/resources/services/ocm/provision-shards.secret.yaml
@@ -6,7 +6,7 @@ metadata:
     qontract.recycle: "true"
     qontract.ignore_reconcile_time: "true"
 data:
-  provision_shards.config:
+  config:
     {{% b64encode %}}
     provision_shards:
     {{%- for shard in shards %}}
